--- a/index.html
+++ b/index.html
@@ -86,6 +86,31 @@ Copyright:  CC-SA-NC-BY - Creative Commons Attribution-NonCommercial-ShareAlike
   text-align: center;
 }
 
+
+#superpower,
+#people,
+#superheros,
+#asshats,
+#plumber {
+  background-image: url(img/people.jpg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#superpower {
+   background-image: url(img/superpower.gif);
+   background-position: 50% 50%;"
+}
+#superheros {
+  background-image: url(img/superheros.jpg);
+}
+#asshats {
+  background-image: url(img/cowboy_etc.jpg);
+}
+#plumber {
+   background-image: url(img/plumber.jpg);
+}
+
 .twitter-tweet {
   margin-right: 240px;
 }
@@ -145,6 +170,13 @@ It's a champagne problem-->
 </div>
 </div>
 
+<!-- asshats -->
+<div class="slide" id="asshats">
+  <header><h1></h1></header>
+    <section class="content">
+    </section>
+</div>
+
 <!-- What recruiters sell us -->
 <div class="slide" id="pingpong">
 <blockquote class="twitter-tweet" lang="en"><p>What recruiters think I want: Beer cart, ping pong table.
@@ -170,7 +202,7 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
 
 
 <!-- Students -->
-<div class="slide" style="background-image: url(img/people.jpg); background-size: contain; background-position: center; background-repeat: no-repeat;">
+<div class="slide" id="people">
   <header><h1></h1></header>
     <section class="content">
     </section>
@@ -185,7 +217,7 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
 </div>
 
 <!-- Plumber -->
-<div class="slide" style="background-image: url(img/plumber.jpg); background-size: contain; background-position: 100% 100%; background-repeat: no-repeat;">
+<div class="slide" id="plumber">
   <header><h1></h1></header>
     <section class="content">
     </section>
@@ -240,12 +272,12 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
 
 
 <!-- super power slide-->
-    <div class="slide" style="background-image: url(img/superpower.gif); background-size: contain; background-repeat: no-repeat; background-position: 50% 50%;"></div>
+    <div class="slide" id="superpower"></div>
 
 
 
 <!-- Superheroes -->
-<div class="slide" style="background-image: url(img/superheros.jpg); background-size: contain; background-position: center; background-repeat: no-repeat;">
+<div class="slide" id="superheros">
   <header><h1></h1></header>
     <section class="content">
     </section>
