added lots of content

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ div.bad {
 
 <!-- Recruiter 1-->
 <div class="slide intro" id="callLog">
-  <header><h1></h1></header>
+  <header><h1>Incoming Calls</h1></header>
     <section class="content">
       <img alt="90% of calls are from recruiters" src="img/piechart.png">
     </section>
@@ -193,7 +193,7 @@ div.bad {
 <!-- Who I would like to talk to
 It's a champagne problem-->
 <div class="slide intro" id="chatList">
-  <header><h1></h1></header>
+  <header><h1>People I'm willing to talk to</h1></header>
     <section class="content"><img alt="I would rather be speaking to wrong callers" src="img/peopleITalkTo2.png" class="temphidden">
     </section>
 </div>
