added lots of content

--- a/index.html
+++ b/index.html
@@ -99,8 +99,12 @@ blockquote {line-height: 1.4;}
   background-position: center;
   background-repeat: no-repeat;
 }
-#plumber {
+
+#people {
   background-image: url(img/people.jpg);
+}
+#plumber {
+  background-image: url(img/plumber.jpg);
 }
 #superpower {
    background-image: url(img/superpower.gif);
