hopefully finished talk

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ blockquote {line-height: 1.4;}
 }
 
 #minime {
-  background-image: url(img/minime.jpg);
+  background-image: url(img/minime.gif);
 }
 .twitter-tweet {
   margin-right: 240px;
@@ -175,7 +175,7 @@ blockquote {line-height: 1.4;}
   background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0));
 }
 
-#directives {
+#directives, #rules {
   background-image: url(img/apple.png);
   background-position: right 40px bottom 40px;
   background-size: auto;
@@ -483,7 +483,7 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
 
 
 
-<div class="slide">
+<div class="slide" id="rules">
   <header><h1>Rules</h1></header>
     <section class="content">
       <ul>
