estelle superhero pics and less boob slide

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Made by: Estelle Weyl
 Copyright:  CC-SA-NC-BY - Creative Commons Attribution-NonCommercial-ShareAlike
 -->
 <link rel="stylesheet" href="css/index.css"/>
-<link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah|Shadows+Into+Light+Two|Architects+Daughter|Rock+Salt' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Architects+Daughter|Rock+Salt' rel='stylesheet' type='text/css'>
 <style>
 h1 {font-family: 'Rock Salt', cursive;}
 blockquote {line-height: 1.4;}
@@ -358,6 +358,14 @@ It's a champagne problem
   <img src="img/boobs.jpg">
     </section>
 </div>
+
+
+<!-- Intro Slide -->
+    <div class="slide intro">
+      <header>
+        <h1 style="font-size: 3rem;">Welcome to the Web?!</h1>
+      </header>
+    </div>
 
 <!-- asshats -->
 <div class="slide" id="asshats">
