added estelle superhero

--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@ svg text { font-family: Impact;}
 
 #final, #estelle {
   background-image: url(img/shestelle.png);
-  background-position: center right;
-  background-size: auto 50vh;
-} #estelle {
-  background-image: url(img/ColorEstelle.gif);
   background-position: bottom right;
+  background-size: auto 50vh;
+}
+#estelle {
+  background-image: url(img/ColorEstelle.gif);
 }
 </style>
 </head>
