slide order and women $ potential

--- a/index.html
+++ b/index.html
@@ -460,13 +460,18 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
     </section>
 </div>
 
+<!-- Huge Pipes -->
+<div class="slide" id="leaks">
+  <header><h1></h1></header>
+    </section>
+</div>
 
 <!-- Huge Pipes -->
 <div class="slide" id="leaks">
   <header><h1>Women</h1></header>
     <section class="content" style="margin-top: 0">
       <ul style="margin: 0">
-        <li>48% of US work force
+        <li>48% of US work force, 42% of income
         <li>19.6% to 35.2% of our industry
         <li>In Development, earn $0.79 - $0.83
         <li>White=$0.78. Black=$0.64. Latina=$0.56
@@ -600,10 +605,6 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
     </div>
 
 
-<!-- Be kind to amateurs -->
-    <div class="slide">
-        <blockquote class="twitter-tweet" lang="en"><p>Be kind to amateurs, there are more of them than professionals and they&#39;re looking to all of you to see how to act.</p>&mdash; Scott Hanselman (@shanselman) <a href="https://twitter.com/shanselman/status/588088015685201920">April 14, 2015</a></blockquote>
-    </div>
 
 
 
@@ -611,6 +612,10 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
     <div class="slide" id="superpower"></div>
 
 
+<!-- Be kind to amateurs -->
+    <div class="slide">
+        <blockquote class="twitter-tweet" lang="en"><p>Be kind to amateurs, there are more of them than professionals and they&#39;re looking to all of you to see how to act.</p>&mdash; Scott Hanselman (@shanselman) <a href="https://twitter.com/shanselman/status/588088015685201920">April 14, 2015</a></blockquote>
+    </div>
 
 <!-- Superheroes -->
 <div class="slide" id="superheros">
