talk for Cañada College

--- a/index.fluent.html
+++ b/index.fluent.html
@@ -15,6 +15,18 @@ blockquote {line-height: 1.4;}
 .slide {
   font-family: 'Architects Daughter', cursive;
 }
+/*
+#chatList section {
+  background-image: url(img/peopleITalkTo.png);
+  background-repeat: no-repeat;
+  background-position: center 95%;
+}
+#chatList img {
+  position: relative;
+  top: 20px;
+  margin-top: 40px;
+}
+*/
 
 
 
@@ -278,14 +290,9 @@ svg text { font-family: Impact;}
 <!-- Intro Slide -->
     <div class="slide intro">
       <header>
-        <h1 style="font-size: 3rem;">Being Welcoming</h1>
+        <h1 style="font-size: 3rem;">Welcoming the Web</h1>
       </header>
       <h1>Estelle Weyl</h1>
-      <div>
-  <img src="http://akamaicovers.oreilly.com/images/9780980846904/cat.gif" alt="HTML5 and CSS3 for the Real World">
-  <img src="http://akamaicovers.oreilly.com/images/0636920018063/cat.gif" alt="HTML5: The Definitive Guide">
-  <img src="http://akamaicovers.oreilly.com/images/0636920021711/cat.gif" alt="MObile HTML5">
-  \<img src="http://akamaicovers.oreilly.com/images/0636920025955/cat.gif" alt="Web Performance Daybook"></div>
       <h4>@estellevw</h3>
       <h4>www.standardista.com</h3>
     </div>
@@ -368,7 +375,7 @@ It's a champagne problem
 <!-- Intro Slide -->
     <div class="slide intro">
       <header>
-        <h1 style="font-size: 3rem;">Welcome to the Workforce?!</h1>
+        <h1 style="font-size: 3rem;">Welcome to the Web?!</h1>
       </header>
     </div>
 
@@ -465,7 +472,7 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
     <section class="content" style="margin-top: 0">
       <ul style="margin: 0">
         <li>48% of US work force, 42% of income
-        <li>19.6% to 35.2% of my industry
+        <li>19.6% to 35.2% of our industry
         <li>In Development, earn $0.79 - $0.83
         <li>White=$0.78. Black=$0.64. Latina=$0.56
         <li><strong>50% leave STEM due to hostile work environments.</strongh>
@@ -514,9 +521,9 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
       <ul>
         <li>Use the same language for everyone
         <li>Use merit, not potential, as bench marks.
-        <li>Assume every one is AS skilled as you.
-        <li>Assume you are as skilled as everyone else.
-        <li>Assume others are correct.
+        <li>Assume devs are AS skilled as you.
+        <li>Assume their code is as good as yours.
+        <li>Assume devs are correct.
         <li>Listen. Do not interupt.
         <li>Stand up when others are silenced.
     </section>
