talk for Cañada College

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ It's a champagne problem
   <header><h1>Seriously?</h1></header>
     <section class="content">
 
-  <img src="img/sexistjob.gif">
+  <img src="img/sexistjob.gif" style="width: 90%;">
   <img src="img/beer.jpg" style="position: absolute; bottom: 0; right: 0">
     </section>
 </div>
@@ -501,8 +501,8 @@ transform: scale(1.5); transform-origin: top left; "><g></g><g transform="transl
 <!-- 2nd dad or mom -->
 <div class="slide">
   <header><h1></h1></header>
-    <section class="content">A father and son are in a car that stalled on railroad tracks. An oncoming train smashes into the car. The father is killed; the gravely injured son is rushed to a hospital. The doctor enters the room, sees the child on the table. “I cannot operate on this child,” the doctor says; “this child is my son.” How? How can this be?
-    </section>
+    <section class="content"><span style="font-size: 120%;">A father and son are in a car that stalled on railroad tracks. An oncoming train smashes into the car. The father is killed; the gravely injured son is rushed to a hospital. The doctor enters the room, sees the child on the table. “I cannot operate on this child,” the doctor says; “this child is my son.” How? How can this be?
+    </span></section>
 </div>
 
 
